checkout items gap fix

--- a/src/style.css
+++ b/src/style.css
@@ -149,7 +149,7 @@ a.navbar-cart {
 .checkout-grid {
   display: flex;
   flex-direction: column;
-  gap: 3px;
+  gap: 5px;
 }
 
 .checkout-item {
